fix font size on mobile breakpoint

--- a/src/components/HomePage/home.scss
+++ b/src/components/HomePage/home.scss
@@ -135,12 +135,12 @@
     }
 }
 
-@media only screen and (max-width: 767px) and (min-width: 360px) {
+@media only screen and (max-width: 767px) {
     .homepage {
         align-self: center;
 
         &-title {
-            font-size: 5em;
+            font-size: 3em;
             width: max-content;
 
             &-aside {
